//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  name String [not null]
  email String [unique, not null]
  isAdmin Boolean [not null, default: false]
  password String [not null]
  posts Post [not null]
  timeLine TimeLine [not null]
}

Table TimeLine {
  id Int [pk, increment]
  name String [not null]
  startDate DateTime [not null]
  userId Int [not null]
  users User [not null]
  Post Post [not null]
  timeLineHasTravelDays TimeLineHasTravelDays [not null]

  indexes {
    (userId, name) [unique]
  }
}

Table Post {
  id Int [pk, increment]
  title String
  body String [not null]
  userId Int [not null]
  timeLineId Int [not null]
  routeColleaction TimeLine [not null]
  user User [not null]
}

Table TimeLineHasTravelDays {
  timeLineId Int [not null]
  travelDayId Int [not null]
  timeLine TimeLine [not null]
  travelDays TravelDay [not null]

  indexes {
    (timeLineId, travelDayId) [pk]
  }
}

Table TravelDay {
  id Int [pk, increment]
  title String
  body String
  date DateTime [unique, not null]
  distance Decimal
  payments Payment [not null]
  route Route [not null]
  timeLineTravelDays TimeLineHasTravelDays [not null]
  truncatedRoute TruncatedRoute [not null]
}

Table Route {
  id Int [pk, increment]
  type String [not null]
  coordinates Json [not null]
  properties Json [not null]
  travelDayId Int
  travelDay TravelDay
}

Table TruncatedRoute {
  id Int [pk, increment]
  coordinates Json [not null]
  travelDayId Int
  travelDay TravelDay
}

Table Payment {
  id Int [pk, increment]
  amount Decimal [not null]
  category String
  description String
  travelDayId Int [not null]
  currencyId String [not null]
  currency Currency [not null]
  travelDay TravelDay [not null]
}

Table Currency {
  isoCode String [pk]
  currency String [unique, not null]
  exchangeRate Decimal
  payments Payment [not null]
}

Table spatial_ref_sys {
  srid Int [pk]
  auth_name String
  auth_srid Int
  srtext String
  proj4text String
}

Ref: TimeLine.userId > User.id

Ref: Post.timeLineId > TimeLine.id

Ref: Post.userId > User.id

Ref: TimeLineHasTravelDays.timeLineId > TimeLine.id

Ref: TimeLineHasTravelDays.travelDayId > TravelDay.id

Ref: Route.travelDayId > TravelDay.id

Ref: TruncatedRoute.travelDayId > TravelDay.id

Ref: Payment.currencyId > Currency.isoCode

Ref: Payment.travelDayId > TravelDay.id